--- a/roles/galaxy-docker/tasks/provision/installgenomes.yml
+++ b/roles/galaxy-docker/tasks/provision/installgenomes.yml
@@ -88,7 +88,7 @@
     ansible_ssh_pipelining: False
 
 - name: Use ephemeris run-data-managers to run data managers
-  command: "run-data-managers -g localhost:{{galaxy_web_port}} -a {{galaxy_admin_api_key}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}} -v"
+  command: "{{galaxy_docker_docker_user_virtualenv}}/bin/run-data-managers -g localhost:{{galaxy_web_port}} -a {{galaxy_admin_api_key}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}} -v"
   with_items: "{{dbkeys.files}}"
   ignore_errors: yes # If databases fail galaxy is still restarted so the ones that did not fail are available
   register: result
