--- a/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
@@ -8,4 +8,9 @@
 
 - include: addldap.yml
   when: addldap
-  
+
+- include: galaxy_welcome.yml
+  when: galaxywelcome
+
+- include: setup_cluster_general.yml
+  when: galaxy_docker_cluster
