--- a/roles/galaxy-docker/tasks/provision/installtools.yml
+++ b/roles/galaxy-docker/tasks/provision/installtools.yml
@@ -9,11 +9,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-- name: Check if galaxy has started
-  command: echo this always reports as changed
-  notify: check if galaxy has started
 
-- meta: flush_handlers
 
 - name: Make sure tool directory exists
   file:
@@ -65,7 +61,7 @@
     - "{{tools.files}}"
 
 - name: Use ephemeris shed install to install tools
-  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}"
+  command: "{{galaxy_docker_docker_user_virtualenv}}/bin/shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_admin_api_key}} -t {{galaxy_docker_tool_dir}}/{{item.path | basename}}"
   with_items: "{{tools.files}}"
   ignore_errors: yes
 
