--- a/roles/galaxy-docker/tasks/upgrade/main.yml
+++ b/roles/galaxy-docker/tasks/upgrade/main.yml
@@ -1,4 +1,4 @@
-- include: nginxsettings.yml
+- include: ../prerequisites/nginxsettings.yml
   when: nginxsettings
 
 - name: Setting new docker container for the test upgrade.
