--- a/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
@@ -4,7 +4,5 @@
     image: "{{docker_image}}"
     name: "export_folder_creator_{{ansible_date_time.epoch}}"
     state: started
-    user: "{{container_galaxy_user}}"
+    user: "{{galaxy_docker_web_user_id}}"
     command: "python /usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
-  become_user: "{{docker_user}}"
-  become: yes
