--- a/roles/galaxy-docker/tasks/provision/main.yml
+++ b/roles/galaxy-docker/tasks/provision/main.yml
@@ -7,6 +7,7 @@
     inspect: !unsafe '{{.State.Running}}'
   register: docker_running
   when: ( installtools or installgenomes )
+  ignore_errors: yes # If the container does not exist this will run.
 
 - name: Show docker inspection results
   debug:
@@ -36,9 +37,9 @@
 - include: installephemeris.yml
   when: ( installtools or installgenomes )
 
-- name: Check if galaxy has started
+- name: Activate handler to check if provision galaxy has started
   command: echo this always reports as changed
-  notify: check if galaxy has started
+  notify: check if provision galaxy has started
   when: ( installtools or installgenomes )
 
 - meta: flush_handlers
