--- a/roles/galaxy-docker/tasks/provision/main.yml
+++ b/roles/galaxy-docker/tasks/provision/main.yml
@@ -22,3 +22,17 @@
 
 - include: installgenomes.yml
   when: installgenomes
+
+- name: register whether the docker provision container is running
+  command: "docker inspect -f {{inspect}} {{docker_provision_container_name}}"
+  vars:
+    inspect: !unsafe '{{.State.Running}}'
+  register: provision_container_running
+  when: ( installtools or installgenomes )
+  ignore_errors: yes # If the container does not exist this will run.
+
+- name: Remove the docker provision container
+  docker_container:
+    name: "{{docker_provision_container_name}}"
+    state: absent
+  when: provision_container_running.stdout | bool
