--- a/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/install_packages.yml
@@ -24,3 +24,8 @@
   pip:
     name: virtualenv
     state: present
+
+- name: install required passlib module
+  pip:
+    name: "passlib"
+    state: latest
