--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -25,6 +25,7 @@ galaxy_docker_web_user: galaxy
 galaxy_docker_web_user_id: 1450
 galaxy_docker_web_group_id: 1450
 galaxy_docker_web_user_private_key: "{{ssh_dir}}/{{galaxy_docker_web_user}}.rsa"
+galaxy_docker_web_user_virtualenv: "/home/{{galaxy_docker_web_user}}/virtualenv"
 
 galaxy_docker_provision_user: admin@galaxy.org
 galaxy_docker_provision_key: admin
