--- a/roles/galaxy-docker/tasks/start_container/install_python_dependencies.yml
+++ b/roles/galaxy-docker/tasks/start_container/install_python_dependencies.yml
@@ -1,7 +1,3 @@
-- name: Show ldap variables
-  debug:
-    var: ldap
-    verbosity: 1
 
 - name: register whether the container is running
   command: "docker inspect -f {{inspect}} {{docker_container_name}}"
@@ -20,18 +16,13 @@
     state: started
   when: not docker_running.stdout | bool
 
-- name:  Create script to include python-ldap and restart the container
-  template:
-    dest: "{{docker_export_location}}/install_python_ldap.sh"
-    mode: 700
-    src: install_python_ldap.sh.j2
-
 - name: install python_ldap in docker container
   command: "docker exec {{name}} {{command}}"
   vars:
     name: "{{docker_container_name}}"
-    command: /export/install_python_ldap.sh
+    command: /galaxy_venv/bin/pip install python-ldap -i https://wheels.galaxyproject.org
   register: ldap_python_install
+  notify: restart galaxy in container
 
 - name: show installationresults
   debug:
