sge cluster works

--- a/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
@@ -26,4 +26,7 @@
 - include: setup_cluster_general.yml
   when: galaxy_docker_cluster
 
+- include: setupsge.yml
+  when: setupsge
+
 - include: report_user.yml
