--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -13,18 +13,18 @@
 galaxy_docker_remote_key_dir: /tmp/keys
 #users
 galaxy_docker_docker_user: galaxy_docker
-galaxy_docker_docker_user_private_key: "{{ssh_dir}}/{{galaxy_docker_docker_user}}.rsa"
+galaxy_docker_docker_user_private_key: "{{ssh_dir}}/{{galaxy_docker_docker_user}}"
 galaxy_docker_docker_user_virtualenv: "/home/{{galaxy_docker_docker_user}}/virtualenv"
 
 galaxy_docker_database_user: postgres
 galaxy_docker_database_user_id: 1550
 galaxy_docker_database_group_id: 1550
-galaxy_docker_database_user_private_key: "{{ssh_dir}}/{{galaxy_docker_database_user}}.rsa"
+galaxy_docker_database_user_private_key: "{{ssh_dir}}/{{galaxy_docker_database_user}}"
 
 galaxy_docker_web_user: galaxy
 galaxy_docker_web_user_id: 1450
 galaxy_docker_web_group_id: 1450
-galaxy_docker_web_user_private_key: "{{ssh_dir}}/{{galaxy_docker_web_user}}.rsa"
+galaxy_docker_web_user_private_key: "{{ssh_dir}}/{{galaxy_docker_web_user}}"
 galaxy_docker_web_user_virtualenv: "/home/{{galaxy_docker_web_user}}/virtualenv"
 
 galaxy_docker_provision_user: admin@galaxy.org
