added customimage improvement

--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -40,9 +40,9 @@ docker_container_name: galaxy
 docker_provision_container_name: galaxy-provision
 docker_container_hostname: galaxy-docker
 docker_extra_volumes: ""
-docker_build_dir: "/home/{{galaxy_docker_docker_user}}/docker_image/"
+docker_build_dir: "/home/{{galaxy_docker_docker_user}}/docker_build/"
 bgruening_galaxy_stable_version: 17.05
-docker_image_changed_uids: "galaxy-stable-changed-uids:{{bgruening_galaxy_stable_version}}"
+docker_image_changed_uids: "galaxy_stable_changed_uids:{{bgruening_galaxy_stable_version}}"
 # firewall, nginx and ports
 ufw_profile: galaxy
 public_galaxy_web_port: 80
