--- a/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/customimage.yml
@@ -12,21 +12,24 @@
 - name: Copy files to docker build directory
   copy:
     src: "{{docker_custom_image_dir}}"
-    dest: "{{docker_build_dir}}"
+    dest: "{{docker_build_dir}}/custom_image"
     mode: 0600
 
 - name: Template the Dockerfile
-  template: 
+  template:
+    dest: "{{docker_build_dir}}/custom_image/Dockerfile"
+    src: Dockerfile.j2
+    mode: 0600
+    force: yes
 
 - name: Build custom docker image
   docker_image:
     name: "{{docker_image}}"
-    path: "{{docker_build_dir}}"
-    pull: True
+    path: "{{docker_build_dir}}/custom_image"
     force: yes
     state: present
 
 - name: remove docker build directory
   file:
-    path: "{{docker_build_dir}}"
+    path: "{{docker_build_dir}}/custom_image"
     state: absent
