proper creation of export folders

--- a/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/create_export_directory_folders.yml
@@ -2,7 +2,17 @@
   docker_container:
     volumes: "{{docker_export_location}}:/export/"
     image: "{{docker_image}}"
-    name: "export_folder_creator_{{ansible_date_time.epoch}}"
+    name: "export_folder_creator"
     state: started
+    restart: yes
     user: "{{galaxy_docker_web_user_id}}"
     command: "python /usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
+
+- name: register whether the folder creator container has finished
+  command: "docker inspect -f {{inspect}} export_folder_creator"
+  vars:
+    inspect: !unsafe '{{.State.Running}}'
+  register: folder_container_running
+  until: 'not folder_container_running.stdout | bool'
+  retries: 10
+  delay: 10
