--- a/roles/galaxy-docker/tasks/provision/main.yml
+++ b/roles/galaxy-docker/tasks/provision/main.yml
@@ -18,7 +18,7 @@
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
-    ansible_ssh_user: "{{galaxy_docker_web_ssh_user}}"
+    ansible_user: "{{galaxy_docker_web_ssh_user}}"
     ansible_ssh_private_key_file: "{{galaxy_docker_web_user_private_key}}"
 
 - include: installephemeris.yml
