--- a/roles/galaxy-docker/tasks/main.yml
+++ b/roles/galaxy-docker/tasks/main.yml
@@ -24,7 +24,7 @@
     galaxy_docker_database_user_private_key: "{{ansible_ssh_private_key_file}}"
     galaxy_docker_docker_user_private_key: "{{ansible_ssh_private_key_file}}"
     galaxy_docker_web_user_private_key: "{{ansible_ssh_private_key_file}}"
-  when: not galaxy_docker_run_unpriviledged
+  when: galaxy_docker_run_privileged | bool
 
 # Starts a new ssh connection as an unpriviledged user for each section of the role
 - name: Run as several users over ssh
@@ -34,7 +34,7 @@
     galaxy_docker_docker_ssh_user: "{{galaxy_docker_docker_user}}"
     galaxy_docker_web_ssh_user: "{{galaxy_docker_web_user}}"
     galaxy_docker_database_ssh_user: "{{galaxy_docker_database_user}}"
-  when: galaxy_docker_run_unpriviledged
+  when: not galaxy_docker_run_privileged | bool
 
 - include: prerequisites/main.yml
   when: galaxy_docker_prerequisites
