--- a/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/change_uids.yml
@@ -32,6 +32,8 @@
     line: "{{item.line}}"
     path: "{{docker_build_dir}}/change_uid/galaxy/Dockerfile"
   with_items:
+    - regexp: '(GALAXY_USER=)([a-zA-Z]*)( \\)'
+      line: '\1"{{galaxy_docker_web_user}}"\3'
     - regexp: '(GALAXY_UID=)([0-9]*)( \\)'
       line: '\1"{{galaxy_docker_web_user_id}}"\3'
     - regexp: '(GALAXY_GID=)([0-9]*)( \\)'
@@ -40,6 +42,8 @@
       line: '\1"{{galaxy_docker_database_user_id}}"\3'
     - regexp: '(GALAXY_POSTGRES_GID=)([0-9]*)( \\)'
       line: '\1"{{galaxy_docker_database_group_id}}"\3'
+    - regexp: '^(USER )(galaxy)' # This has been submitted upstream as a fix. https://github.com/bgruening/docker-galaxy-stable/pull/373
+      line: '\1$GALAXY_USER'
 
 - name: Build docker image with changed_uids
   docker_image:
