--- a/roles/galaxy-docker/tasks/prepare_docker/main.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/main.yml
@@ -4,4 +4,15 @@
 - include: customimage.yml
   when: (customimage or galaxy_docker_change_uids)
 
+- name: Check if export folder is created with right permissions
+  file:
+    path: "{{docker_export_location}}"
+    state: directory
+    mode: "{{galaxy_docker_export_location_mode}}"
+  become: "{{galaxy_docker_become}}"
+  become_user: "{{galaxy_docker_web_user}}"
+  vars:
+    ansible_user: "{{galaxy_docker_web_ssh_user}}"
+    ansible_ssh_private_key_file: "{{galaxy_docker_web_user_private_key}}"
+
 - include: create_export_directory_folders.yml
